blueroses.css
/* ... */
nav#Breadcrumb {
    width:auto !important;
    display:flex !important;
    
    /*unnecessary*/
    /*position: absolute;
    right:20px;
    bottom:20px;*/
    
    /*minmode*/
    /*comment out if unwanted*/
    /*margin-bottom:-8px;
    margin-right:-8px;*/
    
    /*half minmode*/
    /*comment out if unwanted*/
    margin-bottom:-5px;
    margin-right:-5px;
}

hwrapper > #PageTitle {display:none;}

@media (max-width : 800px) {
    overlay#Headline {height:20vw;background-size:auto 130%;margin:20px;}
	
/*classic breadcrumbs*/
/*#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}*/
}

@media (max-width : 518px) {
    nav#Breadcrumb {
    /*minmode*/
   /* margin-bottom:-8px;
    margin-right:-8px;*/
    }
}

@media (min-width : 1700px) {
    overlay#Headline {height:11.75vw;background-size:cover;}
}

@media (min-width : 801px) {
.PageModule {
    padding: .3em .45em .25em .45em !important;
}
#MainContentWrapper {
    padding-left: 10px !important;
    padding-right:10px !important;
}
}

nav#SecondaryNav {
    margin-bottom:7.5px;
    height:auto !important;
    border:2px solid #4f4faa !important;
    border-top:none !important;
    border-radius: 0px 0px 18px 18px;
    /*originally about 30px, had to be reduced because different 
    secondary nav sizes would cause inconsistencies when expanded*/
    padding:0px;
    backdrop-filter: blur(10px);
    overflow:visible; /*fix scrollbars appearing when Secondary Nav Hover Animations is installed*/
}

nav#SecondaryNav.Expanded {
 overflow:hidden; /*fixes corners*/
}

pane {
    backdrop-filter: blur(10px);
}

nav#SecondaryNav.Expanded {
    height:90vh !important;
    border:2px solid #fc4b7f !important;
    border-top:none !important;
}

#SearchForm > input {
  background:#3e36ab;
  background-position: center;
  border:3px solid #fc4b7f;
  border-radius:8px;
  box-shadow:0px 0px 3px inset #000000;
  padding:8px !important;
    padding-left:8px !important;
    padding-right:24px !important;
}
	
/*classic breadcrumbs - everywhere*/
#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}

/*div.ThirdPartyModule {
    margin-left: 2px;
    margin-right: 2px;
}*/

/*contrast fix*/
.TitleOnly > ul > li itemcount {color:#ff9bcf !important;}

